overflow fixed

--- a/src/components/ProfileSection/ProfileSection.css
+++ b/src/components/ProfileSection/ProfileSection.css
@@ -1,4 +1,6 @@
-
+body{
+    overflow-x: hidden;
+}
 
 .homePage {
     background: rgb(171, 128, 222);
